# Lilygo_T_QT_Pro_S3-ESP_IDE-Project

./: .clangd  .cproject  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
main/: CMakeLists.txt  main.c
partitions/: partition2.csv
